some visual adjustments

--- a/docs/.~chapter_2.md
+++ b/docs/.~chapter_2.md
@@ -269,7 +269,6 @@ normally distributed and independent.
 is less than 10 milliseconds is?
 
 By theorem 2.40 and example 2.41:
-
 $$
 X \sim N(65,16) \\ 
 Y \sim N(54,9)  \\
@@ -291,9 +290,8 @@ $$
 > checking 100 chips on the new machine is?
 
 By theorem 2.56:
-
 $$
-Y \sim N(54,9) \\
+Y \sim N(54,9)\\
 \mu_{Z}= 100*E(X)= 100*54= 5400 \\
 \sigma_{Z} = \sqrt{V(100X)} = \sqrt{100*9} = 30
 $$
@@ -318,9 +316,8 @@ P(L>3007) = 1 - P(L<3007) \\
 $$
 
 $$
-P(2993>L>3007) = P(L>3007) + P(L<2993) = \\ 
-(1 - P(L<3007)) + P(L<2993)  = \\
-(1-0.9901847) +  0.009815329 = 0.01963066
+P(2993>L>3007) = P(L>3007) + P(L<2993) = (1 - P(L<3007)) + P(L<2993)  = \\
+ = (1-0.9901847) +  0.009815329 = 0.01963066
 $$
 
 
@@ -364,11 +361,12 @@ L_{beam} \sim (2900, \sigma^2_{beam}) \\
 \sigma_{L-L_{beam}}=\sqrt{9+\sigma^2_{beam}}\\
 $$
 
-- We can draw a graph like this, because 99% of all distances should between 90 and 110. So there is only 0.5% left in each side, that the 0.005 quantile is at 90 and the 0.995 quantile is at 110:
+- We can draw graph like this, because 99% of all distances should between 90 and 110. So there is left only 0.5% in each side, that gives 0.005 and 0.995 quantiles:
 
-![](pics/concrete.jpg){: style="width:400px;display:block;margin-left:auto;margin-right:auto;"}
 
-- We can also write this like following: 
+<img src="pics/concrete.jpg" width="400px"/>
+
+- That gives: 
 
 $$
 P(90<L-L_{beam}<110) = P(L-L_{beam}<110) - P(L-L_{beam}<90) \\
@@ -377,7 +375,7 @@ P(L-L_{beam}<90) = 0.005 \\
 $$
 
 
-- We can use theorem 2.43 in order to find a standard deviation of the distance, because the value of the standardized normal random variable at 0.005 quantile should be equal to the transformed distance variable:
+- We can use theorem 2.43, because the value of the standardized normal random variable at 0.005 quantile should be equal to the transformed distance variable:
 
 $$
 z_{0.005} = \frac{90-100}{\sqrt{9+\sigma^2_{beam}}}
@@ -390,7 +388,7 @@ $$
 z_{0.995} = \frac{110-100}{\sqrt{9+\sigma^2_{beam}}}
 $$
 
-- We choose the second equation:
+- We choose the second equation in order to find a standard deviation of the distance
 
 $$
 z_{0.995}= 2.575829 \\
